fixed align list items

--- a/packages/signature/css/signature.css
+++ b/packages/signature/css/signature.css
@@ -356,13 +356,17 @@ BROWSE SIGNATURES SLIDE
     margin-left: 17px;
 }
 .gd-signature-item .gd-signature-name {
-	margin: 3px;
+    margin: 3px;
     font-size: 14px;
     color: #AAAAAA;
     position: absolute;
-    height: 50px;
+    height: 100%;
     width: 146px;
     cursor: pointer;
+    left: 50px;
+    top:0px;
+    align-items: center;
+    display: flex;
 }
 .gd-signature .fa-level-up {
     margin-left: 23px;
